--- a/package.json
+++ b/package.json
@@ -3,13 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@atlaskit/tooltip": "^15.0.14",
+    "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1",
+    "@pnp/common": "^1.3.5",
+    "@pnp/logging": "^1.3.5",
+    "@pnp/odata": "^1.3.5",
+    "@pnp/sp": "^1.3.5",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.5",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-select": "^3.0.4",
+    "axios": "^0.19.0",
+    "mdbreact": "^4.20.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
+    "react-select": "^3.0.4",
+    "react-super-select": "^1.0.22",
     "typescript": "3.6.3"
   },
   "scripts": {
