--- a/bin/tsconfig.json
+++ b/bin/tsconfig.json
@@ -7,15 +7,11 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
-    "lib": ["dom", "es6"],
-    "noUnusedLocals": true
-  },
-  "include": ["src"],
-  "exclude": ["node_modules"]
+    "lib": ["es6"]
+  }
 }
