--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dkg-hris-survey",
   "version": "0.1.0",
+  "homepage": "./",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
