--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     ]
   },
   "dependencies": {
-    "@navikt/craco-plugins": "^1.0.1",
+    "@atlaskit/tooltip": "^15.0.14",
     "@baristalabs/craco-raw-loader": "^1.0.4",
     "@craco/craco": "^5.2.4",
-    "@atlaskit/tooltip": "^15.0.14",
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
+    "@navikt/craco-plugins": "^1.0.1",
     "@pnp/common": "^1.3.5",
     "@pnp/logging": "^1.3.5",
     "@pnp/odata": "^1.3.5",
@@ -57,14 +57,16 @@
     "@types/react-dom": "16.9.0",
     "@types/react-select": "^3.0.4",
     "axios": "^0.19.0",
+    "lodash": "^4.17.14",
     "mdbreact": "^4.20.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-loader-spinner": "^3.1.4",
+    "react-promise-tracker": "^2.0.5",
     "react-scripts": "3.1.1",
     "react-select": "^3.0.4",
     "react-super-select": "^1.0.22",
-    "typescript": "3.5.3",
-    "lodash": "^4.17.14"
+    "typescript": "3.5.3"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
