--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/node": "12.7.5",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-router-dom": "^5.1.0",
     "@types/react-select": "^3.0.4",
     "axios": "^0.19.0",
     "craco-less": "^1.13.0",
@@ -64,6 +65,8 @@
     "react-dom": "^16.9.0",
     "react-loader-spinner": "^3.1.4",
     "react-promise-tracker": "^2.0.5",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "react-select": "^3.0.4",
     "react-super-select": "^1.0.22",
