--- a/package.json
+++ b/package.json
@@ -59,8 +59,11 @@
     "@types/react-select": "^3.0.4",
     "axios": "^0.19.0",
     "craco-less": "^1.13.0",
+    "install": "^0.13.0",
     "lodash": "^4.17.14",
     "mdbreact": "^4.20.0",
+    "notistack": "^0.9.4",
+    "npm": "^6.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-loader-spinner": "^3.1.4",
