--- a/package.json
+++ b/package.json
@@ -73,12 +73,13 @@
     "react-scripts": "3.1.1",
     "react-select": "^3.0.4",
     "react-super-select": "^1.0.22",
+    "react-toastify": "^5.4.0",
     "typescript": "3.5.3"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "ts-node": "^8.3.0",
     "fs-jetpack": "^2.2.2",
-    "sp-pnp-node": "^2.1.6"
+    "npm-run-all": "^4.1.5",
+    "sp-pnp-node": "^2.1.6",
+    "ts-node": "^8.3.0"
   }
 }
