--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "notistack": "^0.9.4",
     "npm": "^6.12.0",
     "react": "^16.9.0",
+    "react-app-polyfill": "^1.0.4",
     "react-dom": "^16.9.0",
     "react-loader-spinner": "^3.1.4",
     "react-promise-tracker": "^2.0.5",
