--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/react-router-dom": "^5.1.0",
     "@types/react-select": "^3.0.4",
     "axios": "^0.19.0",
+    "chart.js": "^2.9.0",
     "craco-less": "^1.13.0",
     "install": "^0.13.0",
     "lodash": "^4.17.14",
@@ -66,6 +67,7 @@
     "npm": "^6.12.0",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.4",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.9.0",
     "react-loader-spinner": "^3.1.4",
     "react-promise-tracker": "^2.0.5",
