--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "@navikt/craco-plugins": "^1.0.1",
+    "@nivo/bullet": "^0.59.2",
     "@pnp/common": "^1.3.5",
     "@pnp/logging": "^1.3.5",
     "@pnp/odata": "^1.3.5",
@@ -62,6 +63,8 @@
     "axios": "^0.19.0",
     "chart.js": "^2.9.0",
     "craco-less": "^1.13.0",
+    "highcharts": "^7.2.1",
+    "highcharts-react-official": "^2.2.2",
     "install": "^0.13.0",
     "lodash": "^4.17.14",
     "mdbreact": "^4.20.0",
@@ -71,6 +74,7 @@
     "react-app-polyfill": "^1.0.4",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.9.0",
+    "react-jsx-highcharts": "^3.6.1",
     "react-loader-spinner": "^3.1.4",
     "react-promise-tracker": "^2.0.5",
     "react-router": "^5.1.2",
