--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/react-select": "^3.0.4",
     "axios": "^0.19.0",
     "chart.js": "^2.9.0",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "craco-less": "^1.13.0",
     "highcharts": "^7.2.1",
     "highcharts-react-official": "^2.2.2",
