--- a/package.json
+++ b/package.json
@@ -43,53 +43,56 @@
     ]
   },
   "dependencies": {
-    "@atlaskit/tooltip": "^15.0.14",
-    "@baristalabs/craco-raw-loader": "^1.0.4",
-    "@craco/craco": "^5.2.4",
-    "@material-ui/core": "^4.4.2",
-    "@material-ui/icons": "^4.4.1",
+    "@atlaskit/tooltip": "^15.1.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.4",
+    "@baristalabs/craco-raw-loader": "^1.2.0",
+    "@craco/craco": "^5.6.2",
+    "@jackwilsdon/craco-use-babelrc": "^1.0.0",
+    "@material-ui/core": "^4.7.1",
+    "@material-ui/icons": "^4.5.1",
     "@navikt/craco-plugins": "^1.0.1",
     "@nivo/bullet": "^0.59.2",
-    "@pnp/common": "^1.3.5",
+    "@pnp/common": "^1.3.7",
     "@pnp/logging": "^1.3.5",
-    "@pnp/odata": "^1.3.5",
-    "@pnp/sp": "^1.3.5",
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
-    "@types/react-router-dom": "^5.1.0",
-    "@types/react-select": "^3.0.4",
+    "@pnp/odata": "^1.3.7",
+    "@pnp/sp": "^1.3.7",
+    "@types/jest": "24.0.23",
+    "@types/node": "12.12.14",
+    "@types/react": "16.9.14",
+    "@types/react-dom": "16.9.4",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/react-select": "^3.0.8",
     "axios": "^0.19.0",
-    "chart.js": "^2.9.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
-    "craco-less": "^1.13.0",
+    "craco-less": "^1.14.4",
     "highcharts": "^7.2.1",
     "highcharts-react-official": "^2.2.2",
     "install": "^0.13.0",
-    "lodash": "^4.17.14",
-    "mdbreact": "^4.20.0",
-    "notistack": "^0.9.4",
-    "npm": "^6.12.0",
-    "react": "^16.9.0",
+    "lodash": "^4.17.15",
+    "mdbreact": "^4.23.0",
+    "notistack": "^0.9.7",
+    "npm": "^6.13.1",
+    "react": "^16.12.0",
     "react-app-polyfill": "^1.0.4",
     "react-chartjs-2": "^2.8.0",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.12.0",
     "react-jsx-highcharts": "^3.6.1",
-    "react-loader-spinner": "^3.1.4",
+    "react-loader-spinner": "^3.1.5",
     "react-promise-tracker": "^2.0.5",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.1",
-    "react-select": "^3.0.4",
-    "react-super-select": "^1.0.22",
-    "react-toastify": "^5.4.0",
-    "typescript": "3.5.3"
+    "react-scripts": "3.2.0",
+    "react-select": "^3.0.8",
+    "react-super-select": "^1.0.23",
+    "react-toastify": "^5.4.1",
+    "typescript": "^3.7.2"
   },
   "devDependencies": {
-    "fs-jetpack": "^2.2.2",
+    "fs-jetpack": "^2.2.3",
     "npm-run-all": "^4.1.5",
-    "sp-pnp-node": "^2.1.6",
-    "ts-node": "^8.3.0"
+    "sp-pnp-node": "^2.2.0",
+    "ts-node": "^8.5.4"
   }
 }
