--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "deploy": "run-s build deploy-build",
     "deploy-production": "run-s build deploy-build-production",
     "deploy-build-debug": "node --inspect ./node_modules/.bin/ts-node --project ./bin/tsconfig.json ./bin/uploadFolderToSP.ts \"./build/**\" \"/Apps/Survey\"",
-    "deploy-build": "ts-node --project ./bin/tsconfig.json ./bin/uploadFolderToSP.ts \"./build/**\" \"/Apps/Survey\" \"dev\"",
+    "deploy-build": " ts-node --project ./bin/tsconfig.json ./bin/uploadFolderToSP.ts \"./build/**\" \"/Apps/Survey\" \"dev\"",
     "deploy-build-production": "ts-node --project ./bin/tsconfig.json ./bin/uploadFolderToSP.ts \"./build/**\" \"/Apps/Survey\" \"production\"",
     "deploy-api": "ts-node --project ./bin/tsconfig.json ./bin/uploadFolderToSP.ts \"./src/api/**\" \"/Apps/Survey\""
   },
@@ -71,9 +71,11 @@
     "highcharts-react-official": "^2.2.2",
     "install": "^0.13.0",
     "lodash": "^4.17.15",
+    "material-ui-flat-pagination": "^4.0.0",
     "mdbreact": "^4.23.0",
     "notistack": "^0.9.7",
     "npm": "^6.13.1",
+    "prettier": "github:prettier/prettier#master",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.4",
     "react-chartjs-2": "^2.8.0",
