--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,6 @@
       "plugins": ["transform-remove-console"]
     }
   },
-  "presets": ["react-app"],
+  "presets": ["react-app", "module:metro-react-native-babel-preset"],
   "plugins": ["@babel/plugin-proposal-optional-chaining"]
 }
