--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
   },
   "devDependencies": {
     "fs-jetpack": "^2.2.3",
+    "metro-react-native-babel-preset": "^0.57.0",
     "npm-run-all": "^4.1.5",
     "sp-pnp-node": "^2.2.0",
     "ts-node": "^8.5.4"
