--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "material-ui-flat-pagination": "^4.0.0",
     "mdbreact": "^4.23.0",
     "notistack": "^0.9.7",
-    "npm": "^6.13.1",
+    "npm": "^6.13.4",
     "prettier": "github:prettier/prettier#master",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.4",
@@ -85,7 +85,7 @@
     "react-promise-tracker": "^2.0.5",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
     "react-super-select": "^1.0.23",
     "react-toastify": "^5.4.1",
