--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "env": {
     "production": {
-      "plugins": ["transform-remove-console"]
+      // "plugins": ["transform-remove-console"]
     }
   },
   "presets": ["react-app", "module:metro-react-native-babel-preset"],
