--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "axios": "^0.19.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "chart.js": "^2.9.3",
+    "chartjs-lines-plugin": "^1.0.3",
+    "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-datalabels": "^0.7.0",
     "craco-less": "^1.14.4",
     "highcharts": "^7.2.1",
