--- a/.gitignore
+++ b/.gitignore
@@ -5089,3 +5089,4 @@ __node_modules/@material-ui/core/es/useMediaQuery/index.js
 __node_modules/@material-ui/core/es/useMediaQuery/useMediaQuery.js
 __node_modules/@material-ui/core/es/useMediaQuery/useMediaQueryTheme.js
 __node_modules/@material-ui/core/es/useScrollTrigger/index.js
+package-lock.json
